--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,17 +1,12 @@
-name: "Terraform - Genesys Queue Deployment"
+name: "Genesys CX as Code Deployment"
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch: # allows manual trigger
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   terraform:
-    name: "Apply Queue Config"
     runs-on: ubuntu-latest
 
     env:
@@ -19,8 +14,12 @@ jobs:
       GENESYSCLOUD_OAUTHCLIENT_SECRET: ${{ secrets.GENESYSCLOUD_OAUTHCLIENT_SECRET }}
       GENESYSCLOUD_REGION: ${{ secrets.GENESYSCLOUD_REGION }}
 
+    defaults:
+      run:
+        working-directory: ./cxacode
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Terraform
@@ -30,9 +29,6 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-
-      - name: Terraform Validate
-        run: terraform validate
 
       - name: Terraform Plan
         run: terraform plan -no-color
